proc-macros/tests/derive_scenic_partial/fail/invalid_syntax.rs
use proc_macros::derive_scenic_partial;

fn main() {
    derive_scenic_partial!(meow);
}
