proc-macros/tests/derive_scenic_partial/fail/invalid_syntax.stderr
error: unexpected token
 --> tests/fail/invalid_syntax.rs:4:12
  |
4 |     derive_scenic_partial!(meow);
  |                     ^^^^
